# database-release-manager

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  common.html  commons_mariadb.html  commons_oracle.html  configure.ac  dbm.html  fix_sphinx2gh-pages.sh  index.html  install.html  logfile.html  mariadb.html  mongo.html  mysql.html  objects.inv  oracle.html  psql.html  search.html  searchindex.js  sources  sqlplus.html  ssl.html
.github/workflows/: push.yml
_sources/: common.md.txt  commons_oracle.md.txt  dbm.md.txt  index.rst.txt  mariadb.md.txt  mongo.md.txt  mysql.md.txt  ssl.md.txt
_sources/modules/: dbm.mod.txt  install.mod.txt  logfile.mod.txt  mariadb.mod.txt  oracle.mod.txt  out_handler.mod.txt  out_stdout.mod.txt  package.mod.txt  psql.mod.txt  sql_handler.mod.txt  sqlite.mod.txt  ssl.mod.txt  sweeper.mod.txt
_sources/src/core/: commons.sh.txt  commons_mariadb.sh.txt  commons_oracle.sh.txt  commons_psql.sh.txt  mysql.sh.txt  psql.sh.txt  sqlplus.sh.txt
_static/: bootstrap-sphinx.css  default.css  pygments.css
docs/: Makefile.am
docs/sources/: commons_mariadb.md  dbm.md  index.rst  install.md  logfile.md  mariadb.md  modules  mongo.md  oracle.md  psql.md  sqlplus.md  ssl.md
docs/sphinx/: Makefile.am  conf.py  conf.py.in  hidden_literalinclude.py  hidden_nodes.py
docs/sphinx/_templates/: layout.html
docs/sphinx/static/: dbrm.css
doctrees/: common.doctree  commons_mariadb.doctree  commons_oracle.doctree  dbm.doctree  environment.pickle  index.doctree  install.doctree  logfile.doctree  mariadb.doctree  mongo.doctree  mysql.doctree  oracle.doctree  psql.doctree  sqlplus.doctree  ssl.doctree
doctrees/modules/: dbm.doctree  install.doctree  logfile.doctree  mariadb.doctree  oracle.doctree  out_handler.doctree  out_stdout.doctree  package.doctree  psql.doctree  sql_handler.doctree  sqlite.doctree  ssl.doctree  sweeper.doctree
doctrees/src/core/: commons.doctree  commons_mariadb.doctree  commons_oracle.doctree  commons_psql.doctree  mysql.doctree  psql.doctree  sqlplus.doctree
etc/: Makefile.am  dbm_sqlite_schema.sql  dbrm.conf  dbrm.conf.example.in  ssl_sqlite_schema.sql
modules/: Makefile.am  dbm.html  dbm.mod  dbm.mod.in  install.html  install.mod  install.mod.in  logfile.html  logfile.mod  logfile.mod.in  mariadb.html  mariadb.mod  mariadb.mod.in  mod-utils.sh  mongo.mod.in  oracle.html  oracle.mod  oracle.mod.in  out_handler.html  out_handler.mod.in  out_stdout.html  out_stdout.mod.in  package.html  package.mod.in  psql.html  psql.mod.in  sql_handler.html  sql_handler.mod  sql_handler.mod.in  sqlite.html  sqlite.mod  sqlite.mod.in  ssl.html  ssl.mod.in  sweeper.html  sweeper.mod.in
schemas/: drm_db.dia
src/: Makefile.am  dbrm  dbrm.in
src/core/: Makefile.am  commons.html  commons.sh  commons_mariadb.html  commons_mariadb.sh  commons_mongo.sh  commons_oracle.html  commons_oracle.sh  commons_psql.html  commons_psql.sh  mongo.sh  mysql.html  mysql.sh  psql.html  psql.sh  sqlplus.html  sqlplus.sh
src/core/dbm/: dbm_args.inc  dbm_exts.inc  dbm_semver.inc  dbm_tools.inc
src/share/: Makefile.am
src/share/oracle/: export_foreign_gen.sql.in  export_foreigns_gen.sql.in  export_function_gen.sql.in  export_functions_gen.sql.in  export_job_gen.sql.in  export_jobs_gen.sql.in  export_package_gen.sql.in  export_packages_gen.sql.in  export_procedure_gen.sql.in  export_procedures_gen.sql.in  export_schedule_gen.sql.in  export_schedules_gen.sql.in  export_sequence_gen.sql.in  export_sequences_gen.sql.in  export_table_gen.sql.in  export_tables_gen.sql.in  export_test_gen.sql.in  export_tests_gen.sql.in  export_trigger_gen.sql.in  export_triggers_gen.sql.in  export_type_gen.sql.in  export_types_gen.sql.in  export_view_gen.sql.in  export_views_gen.sql.in
test/: init_test.sh  test_dbm1.sh  test_out_stdout.sh
