# Project: database-release-manager
# Author(s): Geaaru geaaru<at>gmail.com
# $Id$
# License: GPL 2.0

EXTRA_DIST = \
				 dbm.mod.in \
				 install.mod.in \
				 logfile.mod.in \
				 mariadb.mod.in \
				 oracle.mod.in \
				 sql_handler.mod.in \
				 sqlite.mod.in

DISTCLEANFILES = \
					  dbm.mod \
					  install.mod \
					  logfile.mod \
					  mariadb.mod \
					  oracle.mod \
					  sql_handler.mod \
					  sqlite.mod

modulesdir = $(MODULES_DIR)
dist_modules_DATA = \
						  dbm.mod \
						  install.mod \
						  logfile.mod \
						  mariadb.mod \
						  oracle.mod \
						  sql_handler.mod \
						  sqlite.mod


