# Project: database-release-manager
# Author(s): Geaaru geaaru<at>gmail.com
# $Id$
# License: GPL 2.0

EXTRA_DIST = \
				 commons_mariadb.sh \
				 commons_oracle.sh \
				 commons.sh \
				 mysql.sh \
				 sqlplus.sh \
				 dbm/dbm_args.inc \
				 dbm/dbm_tools.inc

DISTCLEANFILES =

coredir = $(CORE_DIR)
dist_core_DATA = \
					  commons_mariadb.sh \
					  commons_oracle.sh \
					  commons.sh \
					  mysql.sh \
					  sqlplus.sh

dbmdir = $(CORE_DIR)/dbm
dist_dbm_DATA = \
					 dbm/dbm_args.inc \
					 dbm/dbm_tools.inc

