# Project: database-release-manager
# Author(s): Geaaru geaaru<at>gmail.com
# $Id$
# License: GPL 2.0

EXTRA_DIST = \
				 oracle/export_function_gen.sql.in \
				 oracle/export_functions_gen.sql.in \
				 oracle/export_package_gen.sql.in \
				 oracle/export_packages_gen.sql.in \
				 oracle/export_trigger_gen.sql.in \
				 oracle/export_triggers_gen.sql.in \
				 oracle/export_view_gen.sql.in \
				 oracle/export_views_gen.sql.in \
				 oracle/export_job_gen.sql.in \
				 oracle/export_jobs_gen.sql.in \
				 oracle/export_schedule_gen.sql.in \
				 oracle/export_schedules_gen.sql.in \
				 oracle/export_test_gen.sql.in \
				 oracle/export_tests_gen.sql.in \
				 oracle/export_procedure_gen.sql.in \
				 oracle/export_procedures_gen.sql.in \
				 oracle/export_table_gen.sql.in \
				 oracle/export_tables_gen.sql.in \
				 oracle/export_sequence_gen.sql.in \
				 oracle/export_sequences_gen.sql.in \
				 oracle/export_foreign_gen.sql.in \
				 oracle/export_foreigns_gen.sql.in



DISTCLEANFILES =

oracledir = $(SHAREDIR)/oracle
dist_oracle_DATA = \
						 oracle/export_function_gen.sql.in \
						 oracle/export_functions_gen.sql.in \
						 oracle/export_package_gen.sql.in \
						 oracle/export_packages_gen.sql.in \
						 oracle/export_trigger_gen.sql.in \
						 oracle/export_triggers_gen.sql.in \
						 oracle/export_view_gen.sql.in \
						 oracle/export_views_gen.sql.in \
						 oracle/export_job_gen.sql.in \
						 oracle/export_jobs_gen.sql.in \
						 oracle/export_schedule_gen.sql.in \
						 oracle/export_schedules_gen.sql.in \
						 oracle/export_test_gen.sql.in \
						 oracle/export_tests_gen.sql.in \
						 oracle/export_procedure_gen.sql.in \
						 oracle/export_procedures_gen.sql.in \
						 oracle/export_table_gen.sql.in \
						 oracle/export_tables_gen.sql.in \
						 oracle/export_sequence_gen.sql.in \
						 oracle/export_sequences_gen.sql.in \
						 oracle/export_foreign_gen.sql.in \
						 oracle/export_foreigns_gen.sql.in



